@@ -14,6 +14,7 @@
 * (JRuby) Clear the XPath cache on attr removal. (#1109)
 * `XML::Comment.new` argument types are now consistent and safe (and documented) across MRI and JRuby. (#1224)
 * (MRI) Restoring support for Ruby 1.9.2 that was broken in v1.6.4.1 and v1.6.5. (#1207)
+* Check if `zlib` is available before building `libxml2`. (#1188)
 
 
 ==== 互換性
