@@ -461,6 +461,12 @@ EOM
     end
   end
 
+  unless windows_p
+    preserving_globals {
+      have_library('z', 'gzdopen', 'zlib.h')
+    } or abort 'zlib is missing; necessary for building libxml2'
+  end
+
   libxml2_recipe = process_recipe("libxml2", dependencies["libxml2"], static_p, cross_build_p) do |recipe|
     recipe.files = ["ftp://ftp.xmlsoft.org/libxml2/#{recipe.name}-#{recipe.version}.tar.gz"]
     recipe.configure_options += [
